--- a/popup.html
+++ b/popup.html
@@ -1,31 +1,112 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Getting Started Extension's Popup</title>
-    <style>
-      body {
-        min-width: 357px;
-        overflow-x: hidden;
-      }
-
-      img {
-        margin: 5px;
-        border: 2px solid black;
-        vertical-align: middle;
-        width: 75px;
-        height: 75px;
-      }
+<head>
+    <meta charset="UTF-8">
+    <script src="chilitags.js"></script>
+    <script src="jquery-1.10.2.min.js"></script>
+    <style type="text/css">
+        body {
+            margin:0;
+            padding:0;
+        }
+        .fullscreen {
+            position:absolute;
+            width:auto;
+            height:100%;
+        }
+        .info {
+            position: absolute;
+            top: 10px;
+            width: 1000px;
+            text-align: left;
+            z-index: 100;
+            display:block;
+            font-size:x-large;
+            color: #ffffff;
+            text-shadow: 0px -1px 0px #000000,
+                        1px  0px 0px #000000,
+                        0px  1px 0px #000000,
+                        -1px  0px 0px #000000;
+        }
     </style>
+</head>
 
-    <!--
-      - JavaScript and HTML must be in separate files: see our Content Security
-      - Policy documentation[1] for details and explanation.
-      -
-      - [1]: http://developer.chrome.com/extensions/contentSecurityPolicy.html
-     -->
-    <script src="popup.js"></script>
-  </head>
-  <body>
-  </body>
+<body> 
+<video id="webcam" autoplay style="display:none;" width="640" height="480"></video>
+<canvas id="snapshot" width="640" height="480"></canvas>
+<div id="fps" class="info"></div>
+<iframe id="frame" src="" style="position: absolute; width: 800px; height: 600px; top:0px; left: 0px"></iframe>
+
+
+</body>
+<script>
+    var video = document.getElementById('webcam');
+    var canvas = document.getElementById('snapshot');
+    var ctx = canvas.getContext('2d');
+    var localMediaStream = null;
+
+    var continuous = true;
+
+    var width = canvas.width;
+    var height = canvas.height;
+
+    var fps = document.getElementById('fps');
+    var fpsText = document.createTextNode('');
+    fps.appendChild(fpsText);
+
+    //Checking camera
+    var hasGetUserMedia = function() {
+        return !!(navigator.getUserMedia || navigator.webkitGetUserMedia ||
+                navigator.mozGetUserMedia || navigator.msGetUserMedia);
+    }
+    //Error
+    var onFailSoHard = function(e) {
+        console.log('Error!', e);
+    };
+
+    //Camera capture
+    var snapshot = function() {
+        if (localMediaStream) {
+            ctx.drawImage(video, 0, 0, video.width, video.height);
+            var start = new Date();
+            var obj = Chilitags.findTagsOnImage(canvas, true);
+            var end = new Date();
+            var str = 'tag: ';
+            for(var tag in obj){
+            	if(tag=="0"){
+            		//alert("detected 0");
+            		$("#frame").attr("src", "http://localhost:3000/demo");	
+            	}
+            	if(tag=="341"){
+            		//alert("detected 0");
+            		$("#frame").attr("src", "http://localhost:3000/simpleactivity/KKKK");	
+            	}
+
+                str += tag + ", ";
+            }
+            fpsText.nodeValue = "Chilitags processing = " + (end.getTime() - start.getTime()) + "ms  " + str;
+        }
+        if(continuous) requestAnimationFrame(snapshot);
+    }
+
+    if (hasGetUserMedia()) {
+        console.log("Camera OK");
+    } else {
+        alert("Invalid!");
+    }
+
+
+    window.URL = window.URL || window.webkitURL;
+    navigator.getUserMedia  = navigator.getUserMedia || navigator.webkitGetUserMedia ||
+    navigator.mozGetUserMedia || navigator.msGetUserMedia;
+
+    navigator.getUserMedia({video: true}, function(stream) {
+            video.src = window.URL.createObjectURL(stream);
+            localMediaStream = stream;
+            video.play();
+            }, onFailSoHard);
+
+    video.addEventListener('play', function() {setTimeout('snapshot()', 2500);}, false);
+
+</script>
 </html>
-
