--- a/popup.html
+++ b/popup.html
@@ -62,7 +62,7 @@
 <canvas id="snapshot" class="deadcenter" width="640" height="480"></canvas>
 <div id="fps" class="info"></div>
 <div id="action" class="action"></div>
-<iframe id="frame" src="" class="deadcenter" style="position: absolute; width: 90%; height: 100%;"></iframe>
+<iframe id="frame" src="" class="deadcenter" frameBorder="0" style="position: absolute; width: 90%; height: 100%;"></iframe>
 <canvas id="progress" class="topleft" width="80" height="80"></canvas>
 
 </body>
@@ -247,18 +247,26 @@ function isEquivalent(a, b) {
 
     var envelopes = [
         {
-            title: "KKKK",
+            title: "Welcome",
             preptags: ["186","187"],
             actags: ["184","185"], 
-            action: "http://localhost:3000/simpleactivity/KKKK",
+            action: "http://128.178.116.204:3000/simpleactivity/Bienvenus!?image=bienvenue.png",
             inpreparation: undefined,
             inexecution: undefined
         },
         {
-            title: "Polygone Football Demo",
-            preptags: ["176"],
-            actags: ["114"], 
-            action: "http://localhost:3000/demo",
+            title: "Goodbye",
+            preptags: ["190","191"],
+            actags: ["188","189"], 
+            action: "http://128.178.116.204:3000/simpleactivity/À bientôt!?image=bienvenue.png",
+            inpreparation: undefined,
+            inexecution: undefined
+        },
+        {
+            title: "Demo",
+            preptags: ["194","195"],
+            actags: ["192","193"], 
+            action: "http://128.178.116.204:3000/demo",
             inpreparation: undefined,
             inexecution: undefined
         }
