Added up to 12 envelopes for JdC

--- a/popup.html
+++ b/popup.html
@@ -269,6 +269,78 @@ function isEquivalent(a, b) {
             action: "http://128.178.116.204:3000/demo",
             inpreparation: undefined,
             inexecution: undefined
+        },
+        {
+            title: "Sist.Coord",
+            preptags: ["198","199"],
+            actags: ["196","197"], 
+            action: "http://128.178.116.204:3000/simpleactivity/Système de coordonnées",
+            inpreparation: undefined,
+            inexecution: undefined
+        },
+        {
+            title: "RepererA",
+            preptags: ["202","203"],
+            actags: ["200","201"], 
+            action: "http://128.178.116.204:3000/simpleactivity/Réperer?image=pointA.png",
+            inpreparation: undefined,
+            inexecution: undefined
+        },
+        {
+            title: "RepererB",
+            preptags: ["206","207"],
+            actags: ["204","205"], 
+            action: "http://128.178.116.204:3000/simpleactivity/Réperer?image=pointB.png",
+            inpreparation: undefined,
+            inexecution: undefined
+        },
+        {
+            title: "Polygone Football",
+            preptags: ["210","211"],
+            actags: ["208","209"], 
+            action: "http://128.178.116.204:3000/",
+            inpreparation: undefined,
+            inexecution: undefined
+        },
+        {
+            title: "Les Angles",
+            preptags: ["214","215"],
+            actags: ["212","213"], 
+            action: "http://128.178.116.204:3000/simpleactivity/Les Angles",
+            inpreparation: undefined,
+            inexecution: undefined
+        },
+        {
+            title: "New Game",
+            preptags: ["218","219"],
+            actags: ["216","217"], 
+            action: "http://128.178.116.204:3000/new",
+            inpreparation: undefined,
+            inexecution: undefined
+        },
+        {
+            title: "PAUSE!",
+            preptags: ["222","223"],
+            actags: ["220","221"], 
+            action: "http://128.178.116.204:3000/pause",
+            inpreparation: undefined,
+            inexecution: undefined
+        },
+        {
+            title: "Construire55",
+            preptags: ["226","227"],
+            actags: ["224","225"], 
+            action: "http://128.178.116.204:3000/simpleactivity/Construire 55º",
+            inpreparation: undefined,
+            inexecution: undefined
+        },
+        {
+            title: "Roter120",
+            preptags: ["230","231"],
+            actags: ["228","229"], 
+            action: "http://128.178.116.204:3000/simpleactivity/Roter le carré?image=roter120.png",
+            inpreparation: undefined,
+            inexecution: undefined
         }
     ];
 
