small cosmetic changes

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ function isEquivalent(a, b) {
             title: "Welcome",
             preptags: ["186","187"],
             actags: ["184","185"], 
-            action: "http://128.178.116.204:3000/simpleactivity/Bienvenus!?image=bienvenue.png",
+            action: "http://128.178.116.204:3000/simpleactivity/La salle de classe du futur, ou le papier magique?image=EPFLLogo.jpg",
             inpreparation: undefined,
             inexecution: undefined
         },
